# A-Hybrid-forecasting-model

./: README.md  pyproject.toml
data/raw/: README.md
notebooks/: format.ipynb  fourkiotis_pharma_weekly.ipynb  our_study_pharma_daily.ipynb  our_study_pharma_weekly.ipynb  our_study_rossmann.ipynb  ramadhan_pharma_daily.ipynb  rathipriya_pharma_daily.ipynb  zdravkovic_pharma_weekly.ipynb
