[project]
name = "forecasting-medicine-public"
version = "0.1.0"
description = "Forecasting medicine project environment"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "absl-py==2.3.1",
    "aiohappyeyeballs==2.6.2",
    "aiohttp==3.14.1",
    "aiosignal==1.4.0",
    "alembic==1.18.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "attrs==26.1.0",
    "blinker==1.9.0",
    "cachetools==7.1.4",
    "certifi==2026.5.20",
    "cffi==2.0.0",
    "charset-normalizer==3.4.7",
    "click==8.4.1",
    "cloudpickle==3.1.2",
    "cmdstanpy==1.2.5",
    "colorama==0.4.6",
    "colorlog==6.9.0",
    "comm==0.2.3",
    "contourpy==1.3.3",
    "cryptography==48.0.1",
    "cycler==0.12.1",
    "Cython==3.2.5",
    "databricks-sdk==0.117.0",
    "debugpy==1.8.16",
    "decorator==5.2.1",
    "docker==7.1.0",
    "executing==2.2.1",
    "fastapi==0.136.3",
    "Flask==3.1.3",
    "flask-cors==6.0.5",
    "flatbuffers==25.2.10",
    "fonttools==4.63.0",
    "frozenlist==1.8.0",
    "future==1.0.0",
    "gast==0.6.0",
    "gitdb==4.0.12",
    "GitPython==3.1.50",
    "google-auth==2.54.0",
    "google-pasta==0.2.0",
    "graphene==3.4.3",
    "graphql-core==3.2.11",
    "graphql-relay==3.2.0",
    "greenlet==3.5.1",
    "grpcio==1.74.0",
    "h11==0.16.0",
    "h5py==3.14.0",
    "holidays==0.80",
    "huey==3.0.3",
    "idna==3.18",
    "importlib_metadata==9.0.0",
    "importlib_resources==6.5.2",
    "ipykernel==6.30.1",
    "ipython==9.5.0",
    "ipython_pygments_lexers==1.1.1",
    "itsdangerous==2.2.0",
    "jedi==0.19.2",
    "Jinja2==3.1.6",
    "joblib==1.5.3",
    "jsonschema==4.26.0",
    "jsonschema-specifications==2025.9.1",
    "jupyter_client==8.6.3",
    "jupyter_core==5.8.1",
    "keras==3.11.3",
    "kiwisolver==1.5.0",
    "libclang==18.1.1",
    "Mako==1.3.12",
    "Markdown==3.9",
    "markdown-it-py==4.0.0",
    "MarkupSafe==3.0.3",
    "matplotlib==3.11.0",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "ml_dtypes==0.5.3",
    "mlflow==3.13.0",
    "mlflow-skinny==3.13.0",
    "mlflow-tracing==3.13.0",
    "multidict==6.7.1",
    "namex==0.1.0",
    "narwhals==2.22.1",
    "nest-asyncio==1.6.0",
    "nodeenv==1.10.0",
    "numpy==2.4.6",
    "opentelemetry-api==1.42.1",
    "opentelemetry-proto==1.42.1",
    "opentelemetry-sdk==1.42.1",
    "opentelemetry-semantic-conventions==0.63b1",
    "opt_einsum==3.4.0",
    "optree==0.17.0",
    "optuna==4.5.0",
    "packaging==26.2",
    "pandas==2.3.3",
    "parso==0.8.5",
    "patsy==1.0.2",
    "pillow==12.2.0",
    "platformdirs==4.4.0",
    "pmdarima==2.1.0",
    "prettytable==3.17.0",
    "prompt_toolkit==3.0.52",
    "propcache==0.5.2",
    "prophet==1.1.7",
    "protobuf==6.33.6",
    "psutil==7.0.0",
    "pure_eval==0.2.3",
    "pyarrow==24.0.0",
    "pyasn1==0.6.3",
    "pyasn1_modules==0.4.2",
    "pycparser==3.0",
    "pydantic==2.13.4",
    "pydantic_core==2.46.4",
    "Pygments==2.19.2",
    "pyparsing==3.3.2",
    "pyright==1.1.410",
    "pyswarms==1.3.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv==1.2.2",
    "pytz==2026.2",
    "pywin32==312; sys_platform == 'win32'",
    "PyYAML==6.0.3",
    "pyzmq==27.1.0",
    "referencing==0.37.0",
    "requests==2.34.2",
    "rich==14.1.0",
    "rpds-py==0.30.0",
    "scikit-learn==1.9.0",
    "scipy==1.17.1",
    "seaborn==0.13.2",
    "setuptools==82.0.1",
    "six==1.17.0",
    "skops==0.14.0",
    "smmap==5.0.3",
    "SQLAlchemy==2.0.50",
    "sqlparse==0.5.5",
    "stack-data==0.6.3",
    "stanio==0.5.1",
    "starlette==1.3.1",
    "statsmodels==0.14.6",
    "tensorboard==2.20.0",
    "tensorboard-data-server==0.7.2",
    "tensorflow==2.20.0",
    "termcolor==3.1.0",
    "threadpoolctl==3.6.0",
    "tornado==6.5.2",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "typing-inspection==0.4.2",
    "typing_extensions==4.15.0",
    "tzdata==2026.2",
    "urllib3==2.7.0",
    "uvicorn==0.49.0",
    "waitress==3.0.2",
    "wcwidth==0.8.1",
    "Werkzeug==3.1.8",
    "wheel==0.45.1",
    "wrapt==1.17.3",
    "xgboost==3.0.5",
    "yarl==1.24.2",
    "zipp==4.1.0",
]

[tool.uv]
package = false
